patterns/containers/ecs-ec2-alb/cloud_formation_networking.yaml
Resources:
  AlbSGE6D0E5D1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ALB - inbound HTTP from internet
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTP from anywhere
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIpv6: ::/0
          Description: Allow HTTP from anywhere (IPv6)
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Fn::ImportValue: VpcSubnets:ExportsOutputRefVpc8378EB38272D6E3A
    Metadata:
      aws:cdk:path: EcsEc2AlbNetworkingStack/AlbSG/Resource
  ALBAEE750D2:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: "true"
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - AlbSGE6D0E5D1
            - GroupId
      Subnets:
        - Fn::ImportValue: VpcSubnets:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456
        - Fn::ImportValue: VpcSubnets:ExportsOutputRefVpcPublicSubnet2Subnet691E08A351552740
        - Fn::ImportValue: VpcSubnets:ExportsOutputRefVpcPublicSubnet3SubnetBE12F0B65CC33245
      Type: application
    Metadata:
      aws:cdk:path: EcsEc2AlbNetworkingStack/ALB/Resource
  ALBHttpListener04CE8CD0:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - FixedResponseConfig:
            ContentType: text/plain
            MessageBody: Not Found
            StatusCode: "404"
          Type: fixed-response
      LoadBalancerArn:
        Ref: ALBAEE750D2
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: EcsEc2AlbNetworkingStack/ALB/HttpListener/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/9WQzWrDMBCEnyU6Blk1JvSQW9tDMBQKydGYoqw2YRN15erHoQi9e7GTQto36GnZmZ1vYBvVrGpVL/QlVGDOlaW9yruo4Sz1JbxnhEblHULyFL823qWhy2IcQKzFUkhhMICnIZLjWSkyC21My0ePIWyTRbHusgDNLVtivCrRJ5QCHDPCFA03WmL6TNiaH1SRYin6f8KUB20D9qWXLwf+9bEi0eoQCazTZq+tZiA+jo3KT8NgCfTEfnXaPM8e+m5uWYoZdW/I+wCFiPz3+CaWMm1vKQ4pFsnOoDqFh7FZqUdVL06BqPKJI32g2l7nN5QuQuAJAgAA
    Metadata:
      aws:cdk:path: EcsEc2AlbNetworkingStack/CDKMetadata/Default
Outputs:
  AlbEndpoint:
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - ALBAEE750D2
              - DNSName
  ExportsOutputRefALBHttpListener04CE8CD0A657CDCB:
    Value:
      Ref: ALBHttpListener04CE8CD0
    Export:
      Name: EcsEc2AlbNetworkingStack:ExportsOutputRefALBHttpListener04CE8CD0A657CDCB
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
